# CommProtocol

./: #CMakeLists.txt#  .gitignore  .gitmodules  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  C#datasize.txt  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  CmakeLists.txt  CommCodeConventions.txt  CommProtoLayout.txt  CommProtoStatic.vcxproj  CommProtoStatic.vcxproj.filters  CommsPacket.h  NGCP-Comnet-v2.sln  PacketGenInstall.txt  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  comms.cpp  comms.h  commsLink.cpp  commsLink.h  main.cpp  main.cpp~  osThreads.cpp  osThreads.h  pguideforCommProtocol.docx  readmeWallace.txt  readmeWallace.txt~  setup.py  temp.cpp  temp.h  tempFileToHoldEdianSwapCode.txt  xBee_to_Platform.xlsx  xbee.txt
CS_Test/: CS_Test.csproj  Test.cs
CommProto/: AbstractPacket.cpp  AbstractPacket.h  CommsPacket.h  Packets.cpp  Packets.h  Test.cpp  Test.h  UDP.cpp  UDP.h  comms.cpp  comms.h  commsLink.h  main.cpp
CommProto/architecture/: macros.h
CommProto/architecture/connection/: socket-config.h
CommProto/architecture/os/: include_defines.h  mutex-config.h  os_mutex.c  os_mutex.h  os_threads.h  os_udp.h  thread-config.h
CommProto/connection/: CommsLink.h  UDP.cpp  UDP.h
CommProto/include/: AbstractPacket.h  CommDoubleList.h  CommLinkedList.h  CommList.h  CommProto.h  Packets.h  comms.h  lists.cpp
CommProto/include/CommProto/: AbstractPacket.h  CallBack.h  Callback.h  Comm.h  CommNode.h  CommProto.h  Comms.h  HeaderPacket.h  Packets.h  _commnode.h  abstractpacket.h  callback.h  commnode.h  (+5 more)
CommProto/network/: UDP.cpp  UDP.h
CommProto/src/: AbstractPacket.cpp  Callback.cpp  Comm.cpp  Comms.cpp  HeaderPacket.cc  Packets.cpp  _abstractpacket.cpp  _callback.cpp  _comms.cpp  _headerpacket.cc  abstractpacket.cpp  callback.cpp  comms.cpp  headerpacket.cc  main.cpp  packets.cpp
CommProto/tools/: Comparable.h  Comparator.h  StandardComparator.h
Encryption/: CMakeListsTest.txt  generate_cmake.py
Encryption/cryptopp563/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  cmake_install.cmake  cryptopp-object.vcxproj  cryptopp-object.vcxproj.filters  cryptopp-static.vcxproj  cryptopp-static.vcxproj.filters  cryptopp.sln
Encryption/cryptopp564/: CMakeLists.txt  Readme.txt  cryptopp.aps  rdrand.cpp
XbeeC/xbee_ansic_library/: .gitattributes
architecture/: api.h  macros.h
architecture/os/: #arch.h#  #include_defines.h#  arch.h  arch.h~  include_defines.h  mutex-config.h  osMutex.c  osMutex.h  osThreads.c  osThreads.h  os_mutex.c  os_mutex.h  os_threads.c  os_threads.h  thread-config.h  threading.h
cmake/: CommProto-config.cmake  archfiles.cmake  comnet_console.cmake  comnet_debug.cmake  console.cmake  constate.cmake  cryptoPP.cmake  cryptopp.cmake  encryption.cmake  hash-config.cmake  macros.cmake  network-config.cmake  ping.cmake  pkg.cmake  serialization-config.cmake  tools-config.cmake  visualc.cmake  xbee_ansic.cmake
commProto/: comms.cpp  comms.h  main.cpp
libxbee3/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  README.txt  cmake_install.cmake  conn.c  conn.h  libxbee3.sln  libxbee3.vcxproj  libxbee3.vcxproj.filters  mode.c  mode.h  prepare.c  ver.c  xbee.c  xbee.h  xsys_darwin.h  xsys_win32_winpthreads.h
libxbee3/modes/xbee5/: mode5.c
modules/: CommsWrapper.h  HeaderWrapper.cpp
modules/csharp/: ABSPacket.cc  ABSPacket.h  CCommNode.h  CComms.cc  CComms.h  CHeader.cpp  CHeader.h  CMakeLists.txt  CObjectStream.cpp  CObjectStream.h  CSharpNamingConventions.txt  CallBack.cc  CallBack.h  CommNode.cc  CommNode.h  Comms.cc  Comms.h  CommsWrapper.cpp  CommsWrapper.h  Encryptoin.h  Header.cpp  Header.h  HeaderWrapper.cpp  HeaderWrapper.h  ObjSerializable.h  ObjectStream.cpp  ObjectStream.h  ObjectStreamWrapper.cpp  ObjectStreamWrapper.h  main.cc
modules/csharp/constate/: CheckConnectReply.h  CheckConnectRequest.h  ConnectionState.cc  ConnectionState.h  ConnectionStateManager.cc  ConnectionStateManager.h  TimeSyncManager.cc  TimeSyncManager.h  TimeSyncReply.h  TimeSyncRequest.h
modules/csharp/network/: CCommsLink.h  CSerial.h  CSerialLink.cpp  CSerialLink.h  CUDP.cpp  CUDP.h  CUDPLink.cpp  CUDPLink.h  CXbeeLink.cpp  CXbeeLink.h  CommsLink.h  SerialLink.cpp  SerialLink.h  TCPLink.cpp  TCPLink.h  TransportProtocol.h  UDPLink.cpp  UDPLink.h  XbeeLink.cpp  XbeeLink.h
modules/csharp/ping/: PingManager.cc  PingManager.h  PingPacket.cc  PingPacket.h  Pinger.cc  Pinger.h  SyncManager.cc  SyncManager.h  SyncReplyPacket.cc  SyncReplyPacket.h  SyncRequestPacket.cc  SyncRequestPacket.h
modules/csharp/pkg/: CPacketFactory.h  CPacketManager.cc  CPacketManager.h  CPacketTable.cc  CPacketTable.h  PacketFactory.h  PacketManager.cc  PacketManager.h  PacketTable.cc  PacketTable.h
modules/csharp/tools/: Queue.h
modules/csharp/tools/data_structures/: AutoQueue.cc  AutoQueue.h  CAutoQueue.cc  CAutoQueue.h
modules/csharp/tools/data_structures/interface/: CQueue.h  Queue.h
modules/java/: CMakeLists.txt  Readme.txt
modules/python/: CMakeLists.txt  Readme.txt
scripts/: README.md  __init__.py  editor.py  setup.py  version.py
scripts/cmake/: generate_fileNames.py
scripts/linux/: build-setup.sh
tests/classes/cpp/udp/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CPP_TEST.sln  CommProtoUdp.vcxproj  CommProtoUdp.vcxproj.filters  cmake_install.cmake  main.cpp
tests/classes/cpp/xbee/: CMakeLists.txt  CommProtoXBee.vcxproj  CommProtoXBee.vcxproj.filters  cmake_install.cmake  xbee_test.cc
tests/classes/cpp_test/: CMakeLists.txt  main.cpp
tools/: Comparable.h  Comparable.hpp  Comparator.h  Comparator.hpp  StandardComparator.h
tools/data_structures/: .emacs  AutoQueue.h  AutoQueue.hpp  DoubleLinkedList.h  LinkedQueue.h  LinkedQueue.hpp  SingleLinkedList.h
tools/discrete/: NgcpHash.h~
tools/hash/: NgcpHash.cpp  NgcpHash.h  NgcpHash.h~
unit/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  README.txt  Test.cpp  Unit_Test.sln  Visionary.vcxproj  Visionary.vcxproj.filters  cmake_install.cmake
unit/visionary/: assertion.h  simulation.h  test.cc  test.h  unit.h
(+400 files in other folders)
